# actix-sqlx-pg

./: .gitignore  README.md  docker-compose.yaml
app/: .env.example  Cargo.toml
app/src/: main.rs  util.rs
