[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
dotenvy = "0.15.7"
sqlx = { version = "^0.6", features = [
    "postgres",
    "runtime-actix",
    "runtime-actix-rustls",
    "macros",
] }
